# chessbuddy

./: .eslintrc.json  .gitignore  .prettierignore  .prettierrc  .project  Dockerfile  Dockerfile-zig  Dockerfile.mac  Dockerfile.zig  README.md  bun.lockb  cloudbuild.yaml  docker-compose.yml  index.html  package-lock.json  package.json  runDebug.sh  serve.ts  tsconfig.json  vite.config.ts  ws.php
common/: .eslintrc.json  .prettierignore  .prettierrc  bun.lockb  eslint.config.js  jest.config.cjs  jest.config.js  package-lock.json  package.json  serve.ts  spec.md  tsconfig.json
doc/: dev.md  install.md  objects.iuml  overview.md  ui.iuml
docs/: architecture.adoc  games.txt  workspace.dsl
old/: index.html.old  index.tsx  main.css  package-lock.json  package.json
public/: bundle.js  index.html  index_dev.html  manifest.json  openings.js  service-worker.js
react/: .eslintrc.json  bun.lockb  eslint.config.mjs  index.html  index.tsx  jest.config.js  main.css  package-lock.json  package.json  serve.ts  spec.md  tailwind.css  tailwind.js  tsconfig.json  vite.config.js  vite.config.mts  vite.config.ts
rust/: Cargo.toml
rust/src/: main.rs
server/: eslint.config.js  package-lock.json  package.json  serve.ts  server.js  tsconfig.json  webpack.config.js
src/: App.tsx  index.ts  index.tsx  main.css  service-worker.js  serviceWorkerRegistration.js  styles.module.scss  themes.ts  types.d.ts
tools/: openings.js  package-lock.json  package.json  tsconfig.json
wc/: .eslintrc.json  bun.lockb  index.html  package-lock.json  package.json  serve.ts  tsconfig.json  (+1 more)
(+370 files in other folders)
