[package]
name = "chessbuddy"
version = "0.18.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
salvo = { version = "*", features = ["serve-static"] }
tokio = { version = "1", features = ["macros"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
